--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
         </section>
 
         <section id="fourth">
+            <div id="last-section">
             <h2>Y ahora, ¡un bailoteo final!<br>
             Dadle al play.</h2>
             <div class="video">
-                <video controls>
+                <video width="600px" height="400px" controls>
                     <source src="elf.mp4" type="video/mp4">
-                  </video> 
+                  </video>
+            </div>
             </div>
         </section>
     </body>
